fix(_base.scss): reduce h1 and h2 font-size on small screens

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -33,7 +33,7 @@ body,
 h1,
 .h1 {
   --flow-space: 3.75rem;
-  font-size: 2.8125rem;
+  font-size: 2.275rem;
   font-weight: 700;
 
   @media (min-width: $breakpoint-mobile-horizontal) {
@@ -43,7 +43,7 @@ h1,
 
 h2,
 .h2 {
-  font-size: 2.3125rem;
+  font-size: 2.1875rem;
   font-weight: 700;
 
   @media (min-width: $breakpoint-mobile-horizontal) {
